[package]
name = "cargo-atcoder"
version = "0.3.1-alpha.0"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Cargo subcommand for AtCoder"
repository = "https://github.com/tanakh/cargo-atcoder"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "procon"]

[dependencies]
anyhow = "1.0.32"
bytesize = "1.0.1"
cargo_metadata = "0.11.2"
chrono = "0.4.15"
console = "0.12.0"
cookie_0_12_0 = { package = "cookie", version = "=0.12.0" }
cookie_store = "0.11.0"
data-encoding = "2.3.0"
dialoguer = "0.6.2"
dirs = "3.0.1"
futures = "0.3.5"
if_chain = "1.0.0"
indicatif = "0.15.0"
itertools = "0.9.0"
lazy_static = "1.4.0"
notify = "4.0.15"
regex = "1.3.9"
scraper = "0.12.0"
serde = { version = "1.0.116", features = ["derive"] }
sha2 = "0.9.1"
structopt = "0.3.17"
thiserror = "1.0.20"
tokio = { version = "0.2.22", features = ["blocking", "rt-core", "macros", "time"] }
toml = "0.5.6"
toml_edit = "0.2.0"
unicode-width = "0.1.8"
ureq_1_0_0 = { package = "ureq", version = "=1.0.0", default-features = false, features = ["tls"] }
url = "2.1.1"
which = "4.0.2"

[dev-dependencies]
assert_cmd = "1.0.1"
maplit = "1.0.2"
predicates = "1.0.5"
pretty_assertions = "0.6.1"
tempdir = "0.3.7"
