[package]
name = "cargo-atcoder"
version = "0.3.1-alpha.0"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Cargo subcommand for AtCoder"
repository = "https://github.com/tanakh/cargo-atcoder"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "procon"]

[dependencies]
anyhow = "1.0.40"
bytesize = "1.0.1"
cargo_metadata = "0.13.1"
chrono = "0.4.19"
console = "0.14.1"
data-encoding = "2.3.2"
dialoguer = "0.8.0"
dirs = "3.0.2"
futures = "0.3.15"
indicatif = "0.16.2"
itertools = "0.10.0"
lazy_static = "1.4.0"
notify = "4.0.17"
regex = "1.5.4"
reqwest = { version = "0.11.3", features = ["blocking", "cookies"] }
scraper = "0.12.0"
serde = { version = "1.0.126", features = ["derive"] }
sha2 = "0.9.5"
structopt = "0.3.21"
tokio = { version = "1.6.1", features = ["macros", "time"] }
toml = "0.5.8"
toml_edit = "0.2.0"
unicode-width = "0.1.8"
url = "2.2.2"
which = "4.1.0"

[dev-dependencies]
assert_cmd = "1.0.4"
maplit = "1.0.2"
predicates = "1.0.8"
pretty_assertions = "0.7.2"
tempdir = "0.3.7"
