[package]
name = "cargo-atcoder"
version = "0.3.1-alpha.0"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Cargo subcommand for AtCoder"
repository = "https://github.com/tanakh/cargo-atcoder"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "procon"]

[features]
watch = ["notify"]

[dependencies]
anyhow = "1.0.42"
bytesize = "1.0.1"
cargo_metadata = "0.14.0"
chrono = "0.4.19"
console = "0.14.1"
data-encoding = "2.3.2"
dialoguer = "0.8.0"
dirs = "3.0.2"
futures = "0.3.16"
indicatif = "0.16.2"
itertools = "0.10.1"
once_cell = "1.8.0"
notify = { version = "4.0.17", optional = true }
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["cookies"] }
scraper = "0.12.0"
serde = { version = "1.0.127", features = ["derive"] }
sha2 = "0.9.5"
structopt = "0.3.22"
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
toml = "0.5.8"
toml_edit = "0.2.1"
unicode-width = "0.1.8"
url = "2.2.2"
which = "4.2.2"

[dev-dependencies]
assert_cmd = "1.0.7"
maplit = "1.0.2"
predicates = "2.0.1"
pretty_assertions = "0.7.2"
tempdir = "0.3.7"
